--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ SMTP_SECURE=true
 SMTP_USER=info@intesift.com
 SMTP_PASS=info@intesift.com
 FROM_EMAIL=info@intesift.com
+CAQH_CLIENT_ID=your_client_id
+CAQH_CLIENT_SECRET=your_client_secret
+CAQH_BASE_URL=https://api.caqh.org/proview/v1/
