--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ JWT_SECRET=Dm76YPk9UX0BO1MraD578GH3xEzeCwxi1vx1/8DyHFA=
 SMTP_HOST=mail.intesift.com
 SMTP_PORT=465
 SMTP_SECURE=true
-SMTP_USER=info@intesift.com
-SMTP_PASS=info@intesift.com
-FROM_EMAIL=info@intesift.com
+SMTP_USER=crawler@intesift.com
+SMTP_PASS=crawler@intesift.com
+FROM_EMAIL=crawler@intesift.com
 CAQH_CLIENT_ID=your_client_id
 CAQH_CLIENT_SECRET=your_client_secret
 CAQH_BASE_URL=https://api.caqh.org/proview/v1/
