--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "enrollai": "file:",
     "express": "^4.21.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
