--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 PORT=3000
 MONGO_URI=mongodb+srv://enrolai:LEReiMDB30baL95C@cluster0.mql9p.mongodb.net/
 JWT_SECRET=Dm76YPk9UX0BO1MraD578GH3xEzeCwxi1vx1/8DyHFA=
-SMTP_HOST=mail.intesift.com
+SMTP_HOST=mail.shayofunmicareagency.net
 SMTP_PORT=465
 SMTP_SECURE=true
-SMTP_USER=crawler@intesift.com
-SMTP_PASS=crawler@intesift.com
-FROM_EMAIL=crawler@intesift.com
+SMTP_USER=support@shayofunmicareagency.net
+SMTP_PASS=shayofunmicareagency.net
+FROM_EMAIL=support@shayofunmicareagency.net
 CAQH_CLIENT_ID=your_client_id
 CAQH_CLIENT_SECRET=your_client_secret
 CAQH_BASE_URL=https://api.caqh.org/proview/v1/
